# linkcrm

./: AGENTS.md  CLAUDE.md  IMPLEMENTATION_NOTES.md  README.md  create_remaining.sh  structure.md
api/: .env.example  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_password_field.py
api/app/: __init__.py  config.py  database.py  deps.py  emails.py  main.py  models.py  rate_limit.py  schemas.py  security.py
api/app/crud/: __init__.py  events.py  leads.py  links.py  profiles.py  subs.py
api/app/routers/: auth.py  dashboard.py  leads.py  links.py  payments.py  profile.py  public.py  redirects.py
api/app/static/css/: style.css
api/app/static/js/: app.js
api/app/templates/: auth_forgot_password.html  auth_login.html  auth_reset_password.html  auth_signup.html  landing.html  layout.html
api/app/templates/dashboard/: index.html  links.html  profile.html
api/app/templates/public/: page.html  thankyou.html
deploy/: DEPLOYMENT.md  docker-compose.yml
tests/: __init__.py  test_password_reset.py
